Fail Maven incremental build on JDK16 with hint
#KT-45689 Fixed